--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Symbol for redux-symbiote and symbiote-fetching",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"no test specified\" && true"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,8 @@
     "url": "https://github.com/sergeysova/symbiote-symbol/issues"
   },
   "homepage": "https://github.com/sergeysova/symbiote-symbol#readme",
-  "dependencies": {
-    "symbol-creator": "^1.0.0"
+  "dependencies": {},
+  "devDependencies": {
+    "ava": "^1.3.1"
   }
 }
